maze.lessons.maze.shortestpath.ShortestPathMaze.scala.error
JediEscaper:63: error: type mismatch;
 found   : Unit
 required: Int
  if (aMurOuest(x,y)==false && getIndication(x-1,y)<getIndication(x,y)){return 3}
  ^